test/parser/compile_error/subclass_test.mj
program main_test

class A extends int {}
class C extends B {}
class D extends D {}

{
    void main() {}
}